antlr_pigeon/PigeonParser.py
# Generated from /Users/krishna/Documents/GitHub/pidgeon/Pigeon.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class PigeonParser(Parser):

    grammarFileName = "Pigeon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'p'",
        "'r'",
        "'c'",
        "'t'",
        "'g'",
        "'f'",
        "'s'",
        "'o'",
        "'d'",
        "'>'",
        "'<'",
        "'|'",
        "'3'",
        "'5'",
        "'z'",
        "'x'",
        "'?'",
        "'='",
        "'v'",
        "'nl'",
        "'rep'",
        "'-'",
        "'ind'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "ID",
        "INT",
        "LINE_COMMENT",
        "WS",
        "NL",
    ]

    RULE_script = 0
    RULE_pigeoncommands = 1
    RULE_promoter = 2
    RULE_repressor = 3
    RULE_codingseq = 4
    RULE_transcription = 5
    RULE_gene = 6
    RULE_fseq = 7
    RULE_stop = 8
    RULE_operator = 9
    RULE_degredationtag = 10
    RULE_righttriangle = 11
    RULE_lefttriangle = 12
    RULE_bar = 13
    RULE_three = 14
    RULE_five = 15
    RULE_zring = 16
    RULE_xbar = 17
    RULE_box = 18
    RULE_scar = 19
    RULE_vector = 20
    RULE_invert = 21
    RULE_color = 22
    RULE_label = 23
    RULE_ignorecolor = 24
    RULE_commands = 25
    RULE_arccommands = 26
    RULE_rep = 27
    RULE_rep2 = 28
    RULE_ind = 29

    ruleNames = [
        "script",
        "pigeoncommands",
        "promoter",
        "repressor",
        "codingseq",
        "transcription",
        "gene",
        "fseq",
        "stop",
        "operator",
        "degredationtag",
        "righttriangle",
        "lefttriangle",
        "bar",
        "three",
        "five",
        "zring",
        "xbar",
        "box",
        "scar",
        "vector",
        "invert",
        "color",
        "label",
        "ignorecolor",
        "commands",
        "arccommands",
        "rep",
        "rep2",
        "ind",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    ID = 24
    INT = 25
    LINE_COMMENT = 26
    WS = 27
    NL = 28

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ScriptContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PigeonParser.EOF, 0)

        def pigeoncommands(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    PigeonParser.PigeoncommandsContext
                )
            else:
                return self.getTypedRuleContext(
                    PigeonParser.PigeoncommandsContext, i
                )

        def arccommands(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    PigeonParser.ArccommandsContext
                )
            else:
                return self.getTypedRuleContext(
                    PigeonParser.ArccommandsContext, i
                )

        def getRuleIndex(self):
            return PigeonParser.RULE_script

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterScript"):
                listener.enterScript(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitScript"):
                listener.exitScript(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitScript"):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)

    def script(self):

        localctx = PigeonParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 60
                    self.pigeoncommands()

                else:
                    raise NoViableAltException(self)
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << PigeonParser.T__0)
                    | (1 << PigeonParser.T__1)
                    | (1 << PigeonParser.T__2)
                    | (1 << PigeonParser.T__3)
                    | (1 << PigeonParser.T__4)
                    | (1 << PigeonParser.T__5)
                    | (1 << PigeonParser.T__6)
                    | (1 << PigeonParser.T__7)
                    | (1 << PigeonParser.T__8)
                    | (1 << PigeonParser.T__9)
                    | (1 << PigeonParser.T__10)
                    | (1 << PigeonParser.T__11)
                    | (1 << PigeonParser.T__12)
                    | (1 << PigeonParser.T__13)
                    | (1 << PigeonParser.T__14)
                    | (1 << PigeonParser.T__15)
                    | (1 << PigeonParser.T__16)
                    | (1 << PigeonParser.ID)
                    | (1 << PigeonParser.INT)
                )
            ) != 0:
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 65
                    self.arccommands()
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (
                        (
                            ((_la) & ~0x3F) == 0
                            and (
                                (1 << _la)
                                & (
                                    (1 << PigeonParser.T__0)
                                    | (1 << PigeonParser.T__1)
                                    | (1 << PigeonParser.T__2)
                                    | (1 << PigeonParser.T__3)
                                    | (1 << PigeonParser.T__4)
                                    | (1 << PigeonParser.T__5)
                                    | (1 << PigeonParser.T__6)
                                    | (1 << PigeonParser.T__7)
                                    | (1 << PigeonParser.T__8)
                                    | (1 << PigeonParser.T__9)
                                    | (1 << PigeonParser.T__10)
                                    | (1 << PigeonParser.T__11)
                                    | (1 << PigeonParser.T__12)
                                    | (1 << PigeonParser.T__13)
                                    | (1 << PigeonParser.T__14)
                                    | (1 << PigeonParser.T__15)
                                    | (1 << PigeonParser.T__16)
                                    | (1 << PigeonParser.ID)
                                    | (1 << PigeonParser.INT)
                                )
                            )
                            != 0
                        )
                    ):
                        break

            self.state = 72
            self.match(PigeonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PigeoncommandsContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def promoter(self):
            return self.getTypedRuleContext(PigeonParser.PromoterContext, 0)

        def repressor(self):
            return self.getTypedRuleContext(PigeonParser.RepressorContext, 0)

        def codingseq(self):
            return self.getTypedRuleContext(PigeonParser.CodingseqContext, 0)

        def transcription(self):
            return self.getTypedRuleContext(
                PigeonParser.TranscriptionContext, 0
            )

        def stop(self):
            return self.getTypedRuleContext(PigeonParser.StopContext, 0)

        def operator(self):
            return self.getTypedRuleContext(PigeonParser.OperatorContext, 0)

        def degredationtag(self):
            return self.getTypedRuleContext(
                PigeonParser.DegredationtagContext, 0
            )

        def righttriangle(self):
            return self.getTypedRuleContext(
                PigeonParser.RighttriangleContext, 0
            )

        def lefttriangle(self):
            return self.getTypedRuleContext(PigeonParser.LefttriangleContext, 0)

        def bar(self):
            return self.getTypedRuleContext(PigeonParser.BarContext, 0)

        def three(self):
            return self.getTypedRuleContext(PigeonParser.ThreeContext, 0)

        def five(self):
            return self.getTypedRuleContext(PigeonParser.FiveContext, 0)

        def gene(self):
            return self.getTypedRuleContext(PigeonParser.GeneContext, 0)

        def fseq(self):
            return self.getTypedRuleContext(PigeonParser.FseqContext, 0)

        def zring(self):
            return self.getTypedRuleContext(PigeonParser.ZringContext, 0)

        def xbar(self):
            return self.getTypedRuleContext(PigeonParser.XbarContext, 0)

        def box(self):
            return self.getTypedRuleContext(PigeonParser.BoxContext, 0)

        def scar(self):
            return self.getTypedRuleContext(PigeonParser.ScarContext, 0)

        def vector(self):
            return self.getTypedRuleContext(PigeonParser.VectorContext, 0)

        def getRuleIndex(self):
            return PigeonParser.RULE_pigeoncommands

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPigeoncommands"):
                listener.enterPigeoncommands(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPigeoncommands"):
                listener.exitPigeoncommands(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPigeoncommands"):
                return visitor.visitPigeoncommands(self)
            else:
                return visitor.visitChildren(self)

    def pigeoncommands(self):

        localctx = PigeonParser.PigeoncommandsContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_pigeoncommands)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.promoter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.repressor()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.codingseq()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.transcription()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 78
                self.stop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.operator()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.degredationtag()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 81
                self.righttriangle()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 82
                self.lefttriangle()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 83
                self.bar()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 84
                self.three()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 85
                self.five()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 86
                self.gene()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 87
                self.fseq()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 88
                self.zring()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 89
                self.xbar()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 90
                self.box()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 91
                self.scar()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 92
                self.vector()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PromoterContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invert(self):
            return self.getTypedRuleContext(PigeonParser.InvertContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.WS)
            else:
                return self.getToken(PigeonParser.WS, i)

        def label(self):
            return self.getTypedRuleContext(PigeonParser.LabelContext, 0)

        def color(self):
            return self.getTypedRuleContext(PigeonParser.ColorContext, 0)

        def ignorecolor(self):
            return self.getTypedRuleContext(PigeonParser.IgnorecolorContext, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.NL)
            else:
                return self.getToken(PigeonParser.NL, i)

        def getRuleIndex(self):
            return PigeonParser.RULE_promoter

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPromoter"):
                listener.enterPromoter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPromoter"):
                listener.exitPromoter(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPromoter"):
                return visitor.visitPromoter(self)
            else:
                return visitor.visitChildren(self)

    def promoter(self):

        localctx = PigeonParser.PromoterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_promoter)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PigeonParser.T__10]:
                self.state = 95
                self.invert()
                self.state = 96
                self.match(PigeonParser.T__0)
                pass
            elif token in [PigeonParser.T__0]:
                self.state = 98
                self.match(PigeonParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                self.state = 101
                self.match(PigeonParser.WS)

            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.state = 104
                self.label()

            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(PigeonParser.WS)

            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << PigeonParser.T__12)
                    | (1 << PigeonParser.T__13)
                    | (1 << PigeonParser.INT)
                )
            ) != 0:
                self.state = 110
                self.color()

            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.WS:
                self.state = 113
                self.match(PigeonParser.WS)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.T__19:
                self.state = 116
                self.ignorecolor()

            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.match(PigeonParser.NL)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == PigeonParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepressorContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invert(self):
            return self.getTypedRuleContext(PigeonParser.InvertContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.WS)
            else:
                return self.getToken(PigeonParser.WS, i)

        def label(self):
            return self.getTypedRuleContext(PigeonParser.LabelContext, 0)

        def color(self):
            return self.getTypedRuleContext(PigeonParser.ColorContext, 0)

        def ignorecolor(self):
            return self.getTypedRuleContext(PigeonParser.IgnorecolorContext, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.NL)
            else:
                return self.getToken(PigeonParser.NL, i)

        def getRuleIndex(self):
            return PigeonParser.RULE_repressor

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRepressor"):
                listener.enterRepressor(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRepressor"):
                listener.exitRepressor(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRepressor"):
                return visitor.visitRepressor(self)
            else:
                return visitor.visitChildren(self)

    def repressor(self):

        localctx = PigeonParser.RepressorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_repressor)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PigeonParser.T__10]:
                self.state = 124
                self.invert()
                self.state = 125
                self.match(PigeonParser.T__1)
                pass
            elif token in [PigeonParser.T__1]:
                self.state = 127
                self.match(PigeonParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 13, self._ctx)
            if la_ == 1:
                self.state = 130
                self.match(PigeonParser.WS)

            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 14, self._ctx)
            if la_ == 1:
                self.state = 133
                self.label()

            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 15, self._ctx)
            if la_ == 1:
                self.state = 136
                self.match(PigeonParser.WS)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << PigeonParser.T__12)
                    | (1 << PigeonParser.T__13)
                    | (1 << PigeonParser.INT)
                )
            ) != 0:
                self.state = 139
                self.color()

            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.WS:
                self.state = 142
                self.match(PigeonParser.WS)

            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.T__19:
                self.state = 145
                self.ignorecolor()

            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148
                self.match(PigeonParser.NL)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == PigeonParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodingseqContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invert(self):
            return self.getTypedRuleContext(PigeonParser.InvertContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.WS)
            else:
                return self.getToken(PigeonParser.WS, i)

        def label(self):
            return self.getTypedRuleContext(PigeonParser.LabelContext, 0)

        def color(self):
            return self.getTypedRuleContext(PigeonParser.ColorContext, 0)

        def ignorecolor(self):
            return self.getTypedRuleContext(PigeonParser.IgnorecolorContext, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.NL)
            else:
                return self.getToken(PigeonParser.NL, i)

        def getRuleIndex(self):
            return PigeonParser.RULE_codingseq

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCodingseq"):
                listener.enterCodingseq(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCodingseq"):
                listener.exitCodingseq(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCodingseq"):
                return visitor.visitCodingseq(self)
            else:
                return visitor.visitChildren(self)

    def codingseq(self):

        localctx = PigeonParser.CodingseqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_codingseq)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PigeonParser.T__10]:
                self.state = 153
                self.invert()
                self.state = 154
                self.match(PigeonParser.T__2)
                pass
            elif token in [PigeonParser.T__2]:
                self.state = 156
                self.match(PigeonParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 21, self._ctx)
            if la_ == 1:
                self.state = 159
                self.match(PigeonParser.WS)

            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 22, self._ctx)
            if la_ == 1:
                self.state = 162
                self.label()

            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 23, self._ctx)
            if la_ == 1:
                self.state = 165
                self.match(PigeonParser.WS)

            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << PigeonParser.T__12)
                    | (1 << PigeonParser.T__13)
                    | (1 << PigeonParser.INT)
                )
            ) != 0:
                self.state = 168
                self.color()

            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.WS:
                self.state = 171
                self.match(PigeonParser.WS)

            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.T__19:
                self.state = 174
                self.ignorecolor()

            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 177
                self.match(PigeonParser.NL)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == PigeonParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TranscriptionContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invert(self):
            return self.getTypedRuleContext(PigeonParser.InvertContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.WS)
            else:
                return self.getToken(PigeonParser.WS, i)

        def label(self):
            return self.getTypedRuleContext(PigeonParser.LabelContext, 0)

        def color(self):
            return self.getTypedRuleContext(PigeonParser.ColorContext, 0)

        def ignorecolor(self):
            return self.getTypedRuleContext(PigeonParser.IgnorecolorContext, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.NL)
            else:
                return self.getToken(PigeonParser.NL, i)

        def getRuleIndex(self):
            return PigeonParser.RULE_transcription

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTranscription"):
                listener.enterTranscription(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTranscription"):
                listener.exitTranscription(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTranscription"):
                return visitor.visitTranscription(self)
            else:
                return visitor.visitChildren(self)

    def transcription(self):

        localctx = PigeonParser.TranscriptionContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 10, self.RULE_transcription)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PigeonParser.T__10]:
                self.state = 182
                self.invert()
                self.state = 183
                self.match(PigeonParser.T__3)
                pass
            elif token in [PigeonParser.T__3]:
                self.state = 185
                self.match(PigeonParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 29, self._ctx)
            if la_ == 1:
                self.state = 188
                self.match(PigeonParser.WS)

            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 30, self._ctx)
            if la_ == 1:
                self.state = 191
                self.label()

            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 31, self._ctx)
            if la_ == 1:
                self.state = 194
                self.match(PigeonParser.WS)

            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << PigeonParser.T__12)
                    | (1 << PigeonParser.T__13)
                    | (1 << PigeonParser.INT)
                )
            ) != 0:
                self.state = 197
                self.color()

            self.state = 201
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.WS:
                self.state = 200
                self.match(PigeonParser.WS)

            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PigeonParser.T__19:
                self.state = 203
                self.ignorecolor()

            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 206
                self.match(PigeonParser.NL)
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == PigeonParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GeneContext(ParserRuleContext):
        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invert(self):
            return self.getTypedRuleContext(PigeonParser.InvertContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.WS)
            else:
                return self.getToken(PigeonParser.WS, i)

        def label(self):
            return self.getTypedRuleContext(PigeonParser.LabelContext, 0)

        def color(self):
            return self.getTypedRuleContext(PigeonParser.ColorContext, 0)

        def ignorecolor(self):
            return self.getTypedRuleContext(PigeonParser.IgnorecolorContext, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(PigeonParser.NL)
            else:
                return self.getToken(PigeonParser.NL, i)

        def getRuleIndex(self):
            return PigeonParser.RULE_gene

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGene"):
                listener.enterGene(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGene"):
                listener.exitGene(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGene"):
                return visitor.visitGene(self)
            else:
                return visitor.visitChildren(self)

    def gene(self):

        localctx = PigeonParser.GeneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_gene)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PigeonParser.T__10]:
                self.state = 211
                self.invert()
                self.state = 212
                self.match(PigeonParser.T__4)
                pass
            elif token in [PigeonParser.T__4]:
                self.state = 214
                self.match(PigeonParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 218
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 37, self._ctx)
            if la_ == 1:
                self.state = 217
                self.match(PigeonParser.WS)

            self.state = 221
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 38, self._ctx)
            if la_ == 1:
                self.state = 220
                self.label()
